--- a/style.css
+++ b/style.css
@@ -39,17 +39,24 @@ header {
     cursor: pointer;
 }
 
-#task-adding-day-selector {
-    width: 220px;
-    min-width: 50px;
-    margin-right: 9px;
-    margin-left: 17px;
-    font-family: 'Libre Bodoni', serif;;
-}
-
 #adding-btn {
     padding: 0 26px;
     font-family: 'Libre Bodoni', serif;;
+    grid-column: 4 / 5;
+}
+
+#task-adding-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr 150px 90px;
+    gap: 22px;
+}
+
+#item {
+    grid-column: 1 / 3;
+}
+
+#order-select {
+    grid-column: 3 / 4;
 }
 
 p,
@@ -59,7 +66,8 @@ p,
 
 .navbar,
 #scheduled-title,
-#done-title {
+#done-title,
+#task-adding-day-selector {
     font-family: 'Libre Bodoni', serif;;
 }
 
@@ -70,8 +78,17 @@ p,
 
 .check-sure,
 .check-not-sure {
-    min-width: 60px;
-    width: 80px;
+    min-width: 25px;
+    width: 75px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 25px;
+    margin-top: 5px;
+    padding: 5px;
+}
+
+.check-not-sure {
+    margin-left: 50px;
 }
 
 .list-check-btn,
@@ -90,4 +107,45 @@ i {
 
 .list-group-item {
     display: flex;
+}
+
+.toast-div {
+    padding: 18px;
+    font-size: 1.2rem;
+}
+
+@media (max-width: 991px) {
+    #doneList-container {
+        margin-top: 20px;
+    }
+    .list-group-item {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    .list-group-item p {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+    .displayer-container {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+    #task-adding-form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    #item {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+    #task-adding-day-selector {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+    #adding-btn {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
 }
